ajouter le fichier owl

--- a/CustomTagHelper/CustomTagHelper/Views/Blog/Index.cshtml
+++ b/CustomTagHelper/CustomTagHelper/Views/Blog/Index.cshtml
@@ -21,5 +21,6 @@
     <custom-btn icon="fa-solid fa-trash" type="delete" text="suppression"></custom-btn>
 
     <!-- <button class="btn submit">submit</button>-->
+    <script src="~/owlcarousel2-2.3.4/dist/owl.carousel.min.js"></script>
 </body>
 </html>
