ajouter file de min.js  de owl

--- a/CustomTagHelper/CustomTagHelper/Views/Blog/Index.cshtml
+++ b/CustomTagHelper/CustomTagHelper/Views/Blog/Index.cshtml
@@ -11,6 +11,7 @@
     <title>Index</title>
     <link href="~/css/site.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet" />
+    <link href="~/owlcarousel2-2.3.4/dist/assets/owl.carousel.min.css" rel="stylesheet" />
 </head>
 <body>
     <!--  <a href="tel:0782522236" style="color:green">Call</a> -->
@@ -21,6 +22,9 @@
     <custom-btn icon="fa-solid fa-trash" type="delete" text="suppression"></custom-btn>
 
     <!-- <button class="btn submit">submit</button>-->
+    
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/owlcarousel2-2.3.4/dist/owl.carousel.min.js"></script>
+    <script src="~/js/site.js"></script>
 </body>
 </html>
